--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -12,6 +12,7 @@ parameters {
       stage('Init') {
             steps {
                 echo "${params.Greeting} World!"
+                echo "${params.Stage} World!"
             }
         }
         stage('Build') {
@@ -23,7 +24,7 @@ parameters {
                 to be on the first line of the file or it will be ignored.
                 */
                 sh '''#!/bin/bash
-                echo "The test is running in mode"
+                echo "The test is running in ${params.Stage} mode"
                 ls
                 bash hw.sh
                 exit
