--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -22,12 +22,12 @@ parameters {
                 the script to run with /bin/bash instead of /bin/sh, needs 
                 to be on the first line of the file or it will be ignored.
                 */
-                sh '''#!/bin/bash
+                sh '#!/bin/bash
                 echo "The test is running in \"${params.Stage}\" mode"
                 ls
                 bash hw.sh
                 exit
-                '''
+                '
             }
         }
     }
