--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -15,6 +15,9 @@ parameters {
             }
         }
         stage('Build') {
+            environment {
+                Greet = "${params.Greeting}"
+            }
             steps {
                 /*
                 The Groovy script you provided is formatting the first line 
@@ -22,8 +25,9 @@ parameters {
                 the script to run with /bin/bash instead of /bin/sh, needs 
                 to be on the first line of the file or it will be ignored.
                 */
-                echo "The test is running in ${params.Stage} mode"
+                echo "The test is running in ${params.Stage} mode" //paramas seems only can be used outside sh
                 sh '''#!/bin/bash
+                echo "Test parameter $Greet"
                 bash hw.sh
                 exit
                 '''
