--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -1,17 +1,10 @@
 pipeline {
     agent any
-  //paramters
-parameters {
-        //string parameter
-        string(name: 'Testparam', defaultValue: 'test', description: 'Job seeds test')
-        //choice paramter
-        //choice(name: 'Stage', choices: ['dev', 'test', 'uat'], description: 'Deployment Stage')
-    }
-    //stages of build
+    //stage of test
     stages {
       stage('Test') {
             steps {
-                echo "${params.Testparam} passed!"
+                echo "test passed by ${params.Tester}!"
             }
         }
     }
