--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -42,6 +42,9 @@ parameters {
         }
         /*post build action, build another project named MyProject-Test'*/
         stage ('Starting downstream job ') {
+         environment {
+                Tester = "${params.Tester}"
+            }
             steps {
                 build job: 'MyProject-Test'
              }
