--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
       stage('Test') {
             steps {
-                echo "test passed by $Tester!"
+                echo "test passed!"
             }
         }
     }
